# Pacman

./: .clang-format  CMakeLists.txt  Global.h  README.md  main.cpp
.circleci/: config.yml
Game/: ConcreteFactory.cpp  ConcreteFactory.h  Game.cpp  Game.h  GameStateManager.cpp  GameStateManager.h  MapManager.cpp  MapManager.h  ScoreManager.cpp  ScoreManager.h  SoundManager.cpp  SoundManager.h
Game/GameStates/: GameOverState.cpp  GameOverState.h  IGameState.h  LevelState.cpp  LevelState.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  VictoryState.cpp  VictoryState.h
Logic/: Camera.cpp  Camera.h  Random.h  StopWatch.cpp  StopWatch.h  Vector2D.h  World.cpp  World.h
Logic/Entities/: DynamicEntityModel.cpp  DynamicEntityModel.h  EntityModel.cpp  EntityModel.h  IAbstractFactory.h
Logic/Entities/DynamicEntities/: GhostAI.cpp  GhostAI.h  GhostEntity.cpp  GhostEntity.h  PacmanController.cpp  PacmanController.h  PacmanEntity.cpp  PacmanEntity.h
Logic/Entities/DynamicEntities/States/: ChasingState.cpp  ChasingState.h  FearingState.cpp  FearingState.h  IPlayerState.h  RunningState.cpp  RunningState.h  SetupState.cpp  SetupState.h  SleepingState.cpp  SleepingState.h
Logic/Entities/StaticEntities/: CollectableEntity.cpp  CollectableEntity.h
Logic/ObserverPattern/: IObserver.h  ISubject.h
Logic/StatePattern/: StateManager.h
Resources/: Maps.json  savefile.rar  score.txt
View/: GameWindow.cpp  GameWindow.h
View/Entities/: Animation.cpp  Animation.h  EntityView.h
View/Entities/DynamicEntities/: GhostView.cpp  GhostView.h  PacmanView.cpp  PacmanView.h
View/Entities/StaticEntities/: CollectableView.cpp  CollectableView.h
